Added remind.reload permission

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -9,3 +9,6 @@ commands:
     description: Send reminder.
   remindreload:
     description: Reload config
+permissions:
+  remind.reload:
+    default: op
