--- a/src/config.yml
+++ b/src/config.yml
@@ -1,5 +1,14 @@
-remind-syntax: "&cSyntax: /remind <name> <message>"
-no-permission: "&8(&4&l!&8) &6Unknown Command."
+# Slash Remind 1.0.1
+
 remind-message: "&c%name% &7has been reminded for &f%message%&7."
-reload-config: "&cConfig Reloaded."
-remind-permission: "litebans.warn"
+remind-failed: "&cError: &4You cannot remind that person."
+
+#remind-permission: "litebans.warn"
+#reload-permission: "litebans.reload"
+remind-permission: "remind.use"
+reload-permission: "remind.reload"
+
+incorrect-syntax: "&cSyntax: /remind <name> <message>"
+no-permission: "&8(&4&l!&8) &6Unknown Command."
+
+reload-config: "&6SlashRemind Config Reloaded."
